[gd_scene load_steps=10 format=2]

[ext_resource path="res://common/game/mode/fugitive/cop_car/CopCar.gd" type="Script" id=1]
[ext_resource path="res://common/game/mode/fugitive/cop_car/CarSeat.tscn" type="PackedScene" id=2]
[ext_resource path="res://common/game/mode/fugitive/cop_car/car_lock.ogg" type="AudioStream" id=3]
[ext_resource path="res://common/game/mode/fugitive/cop_car/car_door.ogg" type="AudioStream" id=4]
[ext_resource path="res://common/game/mode/fugitive/cop_car/car_horn.ogg" type="AudioStream" id=5]
[ext_resource path="res://common/game/mode/fugitive/cop_car/car_move.ogg" type="AudioStream" id=6]
[ext_resource path="res://common/game/mode/fugitive/cop_car/CarModel.tscn" type="PackedScene" id=7]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2, 1, 2 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1.021, 1, 1.75 )

[node name="CopCar" type="KinematicBody"]
collision_layer = 8
collision_mask = 27
script = ExtResource( 1 )

[node name="cop_car" parent="." instance=ExtResource( 7 )]

[node name="Seats" type="Spatial" parent="."]

[node name="CarSeat" parent="Seats" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.462427, 1.06718, -0.5432 )
is_driver_seat = true

[node name="CarSeat2" parent="Seats" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.325505, 1.06718, -0.5432 )
is_driver_seat = false

[node name="CarSeat3" parent="Seats" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.400647, 1.06718, 0.396391 )
is_driver_seat = false

[node name="CarSeat4" parent="Seats" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.342265, 1.06718, 0.396391 )
is_driver_seat = false

[node name="EnterArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="EnterArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.635683, 0 )
shape = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -0.170192 )
shape = SubResource( 2 )

[node name="HeadLightLeft" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.687184, 0.829184, -2.05037 )
light_color = Color( 1, 0.945098, 0.878431, 1 )
light_energy = 5.0
light_bake_mode = 0
shadow_enabled = true
spot_range = 30.0
spot_attenuation = 1.68179
spot_angle = 30.0

[node name="HeadLightRight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.654211, 0.833763, -2.05037 )
light_color = Color( 1, 0.945098, 0.878431, 1 )
light_energy = 5.0
light_bake_mode = 0
shadow_enabled = true
spot_range = 30.0
spot_attenuation = 1.68179
spot_angle = 30.0

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0564995, 0.376972, -1.09684 )
cast_to = Vector3( 0, 0, -10 )

[node name="DrivingAudio" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.739308, 0 )
stream = ExtResource( 6 )

[node name="LockAudio" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.739308, 0 )
stream = ExtResource( 3 )

[node name="DoorAudio" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.739308, 0 )
stream = ExtResource( 4 )

[node name="HornAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
[connection signal="body_entered" from="EnterArea" to="." method="_on_EnterArea_body_entered"]
